--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -4,4 +4,6 @@ jobs:
   Log-Secret:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }} event."
+      - run: echo "🎉 Gatsby Webhook url ${{secrets.GATSBY_WEBHOOK}} event."
+        env:
+          GATSBY_WEBHOOK: ${{secrets.GATSBY_WEBHOOK}}
