--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -7,4 +7,10 @@ jobs:
       - run: echo "1 Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }}"
         env:
           GATSBY_WEBHOOK: ${{secrets.GATSBY_WEBHOOK}}
-      - run: echo "2 Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }}"
+      - name: Make Request
+        id: myRequest
+        uses: fjogeleit/http-request-action@master
+        with:
+          url: "https://webhook.gatsbyjs.com/hooks/data_source/publish/d09e0864-7d41-4b7a-b114-4cf3a6800cda"
+      - name: Show Response
+          run: echo ${{ steps.myRequest.outputs.response }}
