--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -4,13 +4,12 @@ jobs:
   Log-Secret:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "1 Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }}"
+      - run: echo "Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }}"
         env:
           GATSBY_WEBHOOK: ${{secrets.GATSBY_WEBHOOK}}
-      - name: Make Request
-        id: myRequest
+      - name: Make Post
+        id: rebuildSite
         uses: fjogeleit/http-request-action@master
         with:
           url: 'https://webhook.gatsbyjs.com/hooks/data_source/publish/d09e0864-7d41-4b7a-b114-4cf3a6800cda'
-      - name: Show Response
-        run: echo ${{ steps.myRequest.outputs.response }}
+          method: 'POST'
