--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -1,7 +1,10 @@
 name: Build Site
+on:
+  schedule:
+    - cron: "*/5 * * * *"
 on: [push]
 jobs:
-  Log-Secret:
+  Trigger-Build:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Gatsby Webhook url ${{ secrets.GATSBY_WEBHOOK }}"
