--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -15,5 +15,5 @@ jobs:
         id: rebuildSite
         uses: fjogeleit/http-request-action@master
         with:
-          url: 'https://webhook.gatsbyjs.com/hooks/data_source/publish/d09e0864-7d41-4b7a-b114-4cf3a6800cda'
+          url: ${{secrets.GATSBY_WEBHOOK}}
           method: 'POST'
