--- a/.github/workflows/build-me.yml
+++ b/.github/workflows/build-me.yml
@@ -8,11 +8,13 @@ jobs:
   Trigger-Build:
     runs-on: ubuntu-latest
     steps:
-      - name: Call Gatsby Cloud Webhook
+      - name: Set Env
+        - run: echo "set env using GATSBY_WEBHOOK"
+          env:
+            GATSBY_WEBHOOK: ${{secrets.GATSBY_WEBHOOK}}
+      - name: Post to Gatsby Cloud Webhook
         id: rebuild
         uses: fjogeleit/http-request-action@master
         with:
           url: ${{secrets.GATSBY_WEBHOOK}}
           method: 'POST'
-        env:
-        GATSBY_WEBHOOK: ${{secrets.GATSBY_WEBHOOK}}
